--- a/home.html
+++ b/home.html
@@ -6,21 +6,21 @@
  <body>
 	<header> <center> <h1>Resumé<h1> </center> </header>
 	<hr>
-<h1>Francis Gael R. Gerardo</h1><br>
+<h1>****** Gael R. ******</h1><br>
 <hr>
 	<h2>Personal Information</h2>
 &nbsp &nbsp &nbsp &nbsp &nbsp Age: 18<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Birthdate: February 17, 2005<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Birthdate: February 30, 2005<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Marital Status: Single<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Sex: Male<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Address: Linabuan Norte, Kalibo Aklan<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: 09851812144<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Email: francisgaelg@gmail.com<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Address: Aklan Region 6 Philippines<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Email: ************.com<br>
 	<hr>
 	<h2>Educational Attainment</h2>
 &nbsp &nbsp &nbsp &nbsp &nbsp Senior High School: Northwestern Visaan Colleges TVL ICT w/ Honors<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp High School: Northwestern Visaan Colleges<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Elementary: Linabuan Norte Elementary School<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp High School: Northwestern Visayan Colleges<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Elementary: Elementary School<br>
 	<hr>
 <h2>Skills & Hobbies</h2>
 <h3>Skills</h3>
@@ -28,12 +28,12 @@
 <h3>Hobbies</h3>
 &nbsp &nbsp &nbsp &nbsp &nbsp  Reading Comics
 	<h2>Reference</h2>
-&nbsp &nbsp &nbsp &nbsp &nbsp Name: Jaycob F. Gumban<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Name: Gumban<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Position: CEO, Gumban International<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: 09851812144<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<br>
 <br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Name: Christian Glen Jimenez<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Name: Jimenez<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Position: Head of Human Resources, CGJ Enterprises<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: 09851812144<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<<br>
 </body>
 </html>
