--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
 &nbsp &nbsp &nbsp &nbsp &nbsp Name: Jimenez<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Position: Head of Human Resources, CGJ Enterprises<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<<br>
+<footer>
+	<a href="gallery.html"></a>
+</footer>
 </body>
 </html>
