--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 &nbsp &nbsp &nbsp &nbsp &nbsp Position: Head of Human Resources, CGJ Enterprises<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<<br>
 <footer>
-	<a href="gallery.html"></a>
+	<a href="gallery.html">Gallery</a>
 </footer>
 </body>
 </html>
