--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Name: Jimenez<br>
 &nbsp &nbsp &nbsp &nbsp &nbsp Position: Head of Human Resources, CGJ Enterprises<br>
-&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<<br>
+&nbsp &nbsp &nbsp &nbsp &nbsp Contact No.: **********<br>
 <footer>
 	<a href="gallery.html">Gallery</a>
 </footer>
