--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <h1>THE <br>GALLERY</h1>
     <nav>
         <ul>
-            <li><a href="resume.html"><h3>Resumé</h3></a></li>
+            <li><a href="index.html"><h3>Resumé</h3></a></li>
         </ul>
     </nav>
     </header>
